--- a/SkyrimSouls/SkyrimSouls.vcxproj
+++ b/SkyrimSouls/SkyrimSouls.vcxproj
@@ -121,6 +121,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;SKYRIMSOULS_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)Skyrim\include;$(SolutionDir)SKSE\include;$(SolutionDir)mruby\include;</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>SKSE/DebugLog.h</ForcedIncludeFiles>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -147,21 +150,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SKSE\SKSE.vcxproj">
+    <ClCompile Include="Console.cpp" />
+    <ClCompile Include="Hook_Game.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Settings.cpp" />
+    <ClCompile Include="Wrapper.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Console.h" />
+    <ClInclude Include="Hook_Game.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Settings.h" />
+    <ClInclude Include="Wrapper.h" />
+    <ClInclude Include="Tools.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dll\SKSE\SKSE.vcxproj">
       <Project>{e2bb26ec-2013-42cd-bca5-c9c566ba0379}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\Skyrim\Skyrim.vcxproj">
+    <ProjectReference Include="..\dll\Skyrim\Skyrim.vcxproj">
       <Project>{ad95f75e-fd79-4f2f-bc36-828d592a790a}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Hooks_Menu.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="SkyrimSouls.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Hooks_Menu.h" />
-    <ClInclude Include="SkyrimSouls.h" />
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
