--- a/Skyrim/Skyrim.vcxproj.filters
+++ b/Skyrim/Skyrim.vcxproj.filters
@@ -570,6 +570,9 @@
     <ClCompile Include="src\Misc\GarbageCollector.cpp">
       <Filter>Source Files\Misc</Filter>
     </ClCompile>
+    <ClCompile Include="ExtraMapMarker.cpp">
+      <Filter>Source Files\ExtraData</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Skyrim.h">
