--- a/SkyrimSouls/SkyrimSouls.vcxproj.filters
+++ b/SkyrimSouls/SkyrimSouls.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Wrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Task.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h">
@@ -48,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Task.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ICriticalSection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
