--- a/SkyrimSouls/SkyrimSouls.vcxproj.filters
+++ b/SkyrimSouls/SkyrimSouls.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Task.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ICriticalSection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
